# geom3

./: Cargo.toml  README.md
src/: base.rs  lib.rs  line3.rs  plane.rs  sphere.rs  test.rs  triangle3.rs  vector2.rs  vector3.rs
