[package]
name = "geom3"
version = "0.1.0"
edition = "2024"
authors = ["Ismael Raya"]
description = "3d geometry classes"
license = "MIT"
repository = "https://github.com/Phornee/geom3"
keywords = ["maths", "geometry", "line", "plane", "sphere"]
categories = ["mathematics", "graphics"]

[dependencies]
list = "0.1.3"
vector3 = "2.0.1"
