[package]
name = "geom3"
version = "1.2.2"
edition = "2024"
authors = ["Ismael Raya"]
description = "3d geometry classes"
license = "MIT"
repository = "https://github.com/Phornee/geom3"
keywords = ["triangle", "geometry", "line", "plane", "sphere"]
categories = ["mathematics", "graphics", "rendering::engine"]
readme = "README.md"
homepage = "https://github.com/Phornee/geom3"
documentation = "https://docs.rs/geom3"

[dependencies]
list = "0.1.3"

